# minimind

./: .gitignore  GPU_test.py  eval.py  pyproject.toml  sample_data.txt
dataset/: llm_dataset.py
method/: gqa.py  moe.py
model/: model.py  model_lora.py
trainer/: train_dpo.py  train_grpo.py  train_lora.py  train_ppo.py  train_sft.py  trainer_pretrain.py
